--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <img src="Logo.png" alt="Foto de perfil" class="profile-image">
 
         <h1 class="profile-name">Antonio Alain</h1>
-        <p class="profile-bio">Ciencias Computacionales | Sígueme</p>
+        <p class="profile-bio">Ciencias Computacionales </p>
         
         <div class="links-container">
             <a href="https://youtube.com/@tucanal" class="link-item youtube" target="_blank" rel="noopener noreferrer">
